# data_manipulation_tools

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  autoCorrelation.py  crossCorrelation.py  extractLightReplayVersion.py  markersPlacements.yaml  matchInitPose.py  matchPoseAtIndex.lyx  observersInfos.yaml  requirements.txt  resampleAndExtract.py  resampleAndExtract_fromMocap.py  routine.sh  test.py  test_viking.py
mc_rtc_plugin/.github/workflows/: build.yml
mc_rtc_plugin/src/: MocapAligner.cpp  MocapAligner.h
mc_rtc_plugin/tests/: CMakeLists.txt
mc_rtc_plugin/tests/etc/: mc_rtc.yaml
scripts/: computeTrajectoryAverages.py  crossCorrelation.py  extractLightReplayVersion.py  generate_metrics_plots.py  initialize_datas.py  lightenOutputBin.py  matchInitPose.py  plotAndFormatResults.py  plotEstimatorsResults.py  plotExternalForce.py  plotMultipleTrajs.py  repair_mc_rtc_skipped_iters.py  resampleAndExtract_fromMocap.py  resampleMocapAndCorrectObserversTime.py  resampleMocapAndExtractPose.py
scripts/csv_readers_scripts/TiltObserver/: extract_csv_from_mc_rtc_bin.py  plotResults.py
scripts/paper_results_scripts/: convertMTSToMkv.py  convertMTSToMp4.py  extractImageFromMkv.py  fetch_metrics_results.py  plotContactPoses.py  plotExternalForce.py  plotExternalForceAndBias.py  plotMultipleTrajs.py  plotPoseAndVelocity.py  plotPredMesCorrForce.py
scripts/plots_scripts/: generate_metrics_plots.py
scripts/routine_scripts/: computeMetrics.sh  computeOnlyMetrics.sh  mainRoutine.sh  plotMetrics.sh
scripts/utils/: lightenLogForReplay.sh  lightenLogForReplay2.sh
